work-in-progress: added a separate JS "module" containing the resolving mechanism

--- a/nl.dslmeinte.jsmf/pre-build/build.xml
+++ b/nl.dslmeinte.jsmf/pre-build/build.xml
@@ -18,6 +18,7 @@
 			<fileset dir="." includes="jsmf-preamble.js"/>
 			<fileset dir="." includes="jsmf-emf.js"/>
 			<fileset dir="." includes="jsmf-ecore.js"/>
+			<fileset dir="." includes="jsmf-resolver.js"/>
 			<fileset dir="." includes="jsmf-util.js"/>
 		</concat>
 	</target>
