big Renaming: shedding the EMF roots (somewhat) by ditching the E prefix and other textual references

--- a/nl.dslmeinte.jsmf/pre-build/build.xml
+++ b/nl.dslmeinte.jsmf/pre-build/build.xml
@@ -16,8 +16,8 @@
 		<concat destfile="../jsmf.js" fixlastline="true">
 			<!-- (concatenate in order:) -->
 			<fileset dir="." includes="jsmf-preamble.js"/>
-			<fileset dir="." includes="jsmf-emf.js"/>
-			<fileset dir="." includes="jsmf-ecore.js"/>
+			<fileset dir="." includes="jsmf-meta.js"/>
+			<fileset dir="." includes="jsmf-model.js"/>
 			<fileset dir="." includes="jsmf-resolver.js"/>
 			<fileset dir="." includes="jsmf-util.js"/>
 		</concat>
