work-in-progress on Java-reification of the jsmf meta model and model JSON formats

--- a/nl.dslmeinte.jsmf.dev-support/.project
+++ b/nl.dslmeinte.jsmf.dev-support/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>nl.dslmeinte.jsmf.dev-support</name>
+	<name>nl.dslmeinte.jsmf.java</name>
 	<comment></comment>
 	<projects>
 	</projects>
