--- a/nl.dslmeinte.jsmf.java/.classpath
+++ b/nl.dslmeinte.jsmf.java/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.xtend.XTEND_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/org.json.java_1.0.0.201304261219.jar"/>
+	<classpathentry kind="lib" path="lib/guice-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
