--- a/nl.dslmeinte.jsmf.java/.classpath
+++ b/nl.dslmeinte.jsmf.java/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/org.json.java_1.0.0.201304261219.jar"/>
 	<classpathentry kind="lib" path="lib/guice-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
