fixed model migrator + fixed 1st test + work-in-progress

--- a/nl.dslmeinte.jsmf/.gitignore
+++ b/nl.dslmeinte.jsmf/.gitignore
@@ -4,3 +4,6 @@ dist/
 # symlinked from repo root - for easy editor access in Eclipse:
 README.md
 
+# generated stuff:
+test/**/serializedModel.json
+
